# course-page

./: .gitignore  README.md  latest  pyproject.toml  slides.md  versions.json  zensical.toml
.github/actions/build-docs/: action.yml
.github/actions/create-release/: actions.yml
.github/actions/obtain-version/: action.yml
.github/workflows/: docs.yml
docs/: index.md  markdown.md
docs/chapters/: chapter2.md
slides/: mkslides.yml
slides/unit1/: custom.css  main.md  mkslides.yml
v2027.0/: 404.html  index.html  search.json
v2027.0/chapters/chapter2/: index.html
v2027.0/markdown/: index.html
v2027.0/slides/unit1/: custom.css  index.html
v2027.0/slides/unit1/mkslides-assets/reveal-js/: index.html
v2027.0/slides/unit1/mkslides-assets/reveal-js/css/theme/: index.html
v2027.0/slides/unit1/mkslides-assets/reveal-js/examples/markdown/: index.html
v2027.0/slides/unit1/mkslides-assets/reveal-js/react/: index.html
v2027.0/slides/unit1/mkslides-assets/reveal-js/react/AGENTS/: index.html
v2027.0/slides/unit1/mkslides-assets/reveal-js/react/demo/public/markdown/: index.html
v2027.0/slides/unit1/mkslides-assets/reveal-js/test/simple/: index.html
v2027.0/stylesheets/: extra.css
